# unicog

./: .coveragerc  .dockerignore  .editorconfig  .entelechy_history.json  .gitattributes  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config-enhanced.yaml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  BUILD_STATUS_2025-12-17.md  CMakeLists.txt  COGNITIVE-ENHANCEMENT-DEMO.md  COGOS_DELIVERABLES_SUMMARY.md  COMPREHENSIVE-TODO-CATALOG.md  CONTRIBUTING.md  DEVELOPMENT-ROADMAP.md  Dockerfile  ENTELECHY_IMPLEMENTATION_SUMMARY.md  ENTELECHY_MARKER_MANAGEMENT.md  ENTELECHY_README.md  FIXME_RESOLUTION_PROGRESS_REPORT.md  FOUNDATION_LAYER_GUIDE.md  IMMEDIATE_ACTION_ITEMS_Cognitive_Kernel_Engineer.md  IMPLEMENTATION-VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  JOB_DESCRIPTION_Cognitive_Kernel_Engineer.md  JSON_SERIALIZATION_IMPLEMENTATION.md  NAVIGATION.md  NEXT_PRIORITIES_IMPLEMENTATION_PLAN.md  ORGANIZATION_SUMMARY.md  PHASE-5-COMPLETION-SUMMARY.md  PHASE-II-LOGIC-SYSTEMS.md  PHASE-V-IMPLEMENTATION-SUMMARY.md  PHASE1_INTEGRATION_RESULTS.md  PLACEHOLDER_FIXES_2025-11-30.md  PROGRESS.md  PR_DESCRIPTION.md  (+113 more)
GGML/Tensor/: CMakeLists.txt  README.md  ann_rules.cc  ann_rules.h  fold_rules.cc  fold_rules.h  test_tensor_rules  test_tensor_rules.cc
atenspace/: .gitignore  CMakeLists.txt  FINAL_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_ADVANCED.md  IMPLEMENTATION_ECAN.md  IMPLEMENTATION_PLN.md  PHASE2_COMPLETE.md  README.md
atenspace/.github/agents/: ATenCog.md  ATenML.md  ATenNN.md  ATenSpace.md  ATenTorch.md
atomspace/opencog/guile/: CMakeLists.txt  SchemeEval.cc  SchemeModule.cc  SchemeModule.h  SchemeSmobAS.cc  SchemeSmobLogger.cc
attention/: CMakeLists.txt  README.md  test_dependencies.py
cogzero/: .gitignore  AGENT-ZERO-GENESIS.md  AGENT_ZERO_CI_README.md  AZ-BUILD-001-SUMMARY.md  AZ-INT-001-SUMMARY.md  AZ-INT-002-SUMMARY.md  AZ-MULTI-001-SUMMARY.md  AZ-PERF-001-SUMMARY.md  AZ-TEST-001-SUMMARY.md  BUILD_SYSTEM.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_ORIGINAL.md
cogzero/agentzero-communication/: CMakeLists.txt  README.md  agentzero-communication.pc.in
cogzero/agentzero-communication/cmake/: AgentZeroCommunicationConfig.cmake.in
cogzero/agentzero-communication/examples/: CMakeLists.txt  HumanInterfaceDemo.cpp  basic_communication_example.cpp  batch_processing_example.cpp  dialogue_manager_example.cpp  language_processor_example.cpp  multi_agent_coordination_example.cpp
cogzero/agentzero-communication/src/: AgentComms.cpp  CommunicationUtils.cpp  ConversationState.cpp  DialogueManager.cpp  HumanInterface.cpp  LanguageProcessor.cpp  MessageHandler.cpp  MessageRouter.cpp  MessageSerializer.cpp  MultiAgentCoordinator.cpp  ProtocolManager.cpp
cogzero/agentzero-communication/tests/: AgentCommsUTest.h  CMakeLists.txt  DialogueManagerUTest.cxxtest  MultiAgentCoordinatorUTest.cxxtest  test_CommunicationUtils.cpp  (+3 more)
cogzero/agentzero-core/: AZ-META-001-SUMMARY.md  CMakeLists.txt  README.md  README_ENHANCED.md  build_test.cpp
cogzero/agentzero-distributed/: CMakeLists.txt  README.md  verify-build.sh
cogzero/agentzero-learning/: CMakeLists.txt  CMakeLists_original.txt  EpisodicMemory_README.md  README.md  agentzero-learning.pc.in  validate_implementation.py
cogzero/agentzero-memory/: CMakeLists.txt  README.md  agentzero-memory.pc.in
cogzero/agentzero-perception/: CMakeLists.txt  README.md
cogzero/agentzero-planning/: CMakeLists.txt  README.md
cogzero/agentzero-python-bridge/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
cogzero/agentzero-tools/: AZ-RESOURCE-001-IMPLEMENTATION-SUMMARY.md  AZ-TOOL-002-SUMMARY.md  AZ-TOOL-003-IMPLEMENTATION-SUMMARY.md  CMakeLists.txt  README.md  SECURITY-SUMMARY-AZ-RESOURCE-001.md  SECURITY-SUMMARY.md
cogzero/cmake/: AgentZeroCppConfig.cmake.in
cogzero/docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING_GUIDE.md  CODE_STANDARDS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  INDEX.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
cogzero/examples/: CMakeLists.txt  CognitiveLoopIntegrationDemo.cpp  CognitiveLoopPerceptionIntegration.h  PerceptualProcessorDemo.cpp
cogzero/profiling/: AgentZeroProfiler.cpp  AgentZeroProfiler.h  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  PROFILING_GUIDE.md  SECURITY_SUMMARY.md  profiling_demo.cpp
cogzero/tests/: CMakeLists.txt  TESTING_FRAMEWORK_GUIDE.md  demo_test_framework.cpp
distributed-cognition/: CMakeLists.txt
distributed-cognition/include/: DistributedAtomSpaceSync.h  ECANResourceManager.h  MultiAgentStressTest.h  TensorHypergraphProtocol.h
distributed-cognition/scheme/: cognitive-membrane-sync.scm  distributed-multi-agent-framework.scm
distributed-cognition/src/: DistributedAtomSpaceSync.cc  ECANResourceManager.cc  MultiAgentStressTest.cc  TensorHypergraphProtocol.cc
distributed-cognitive-mesh/ros/: CMakeLists.txt
distributed-cognitive-mesh/tests/: CMakeLists.txt
distributed-cognitive-mesh/websocket/: CMakeLists.txt
ggml-tensor-kernel/: CMakeLists.txt  README.md  test_tensor_kernel.cc  test_tensor_kernel_minimal.cc
ggml-tensor-kernel/include/: atomspace_stub.h  ggml-cpu.h
ggml-tensor-kernel/scheme/: tensor-kernel.scm
ggml-tensor-kernel/src/: AtomSpaceTensorMapper.cc  AtomSpaceTensorMapper_minimal.cc  AttentionAllocator.cc  AttentionAllocator_minimal.cc  CognitivePrimitive.cc  DistributedExecutor.cc  GrammarRegistry.cc  NeuralSymbolicBridge.cc  TensorKernel.cc  TensorKernelSCM.cc  TensorKernel_minimal.cc  TensorRegistry.cc  ggml_stub.c
hypermind/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  SPECIFICATION_SUMMARY.md  hypermind.hpp
hypermind/docs/: README.md  architecture_overview.md  implementation_guide.md  test_generation_guide.md
hypermind/specs/: data_model.zpp  integrations.zpp  operations.zpp  system_state.zpp
hypermind/tests/: multi_reactor_test.cpp  performance_test.cpp  session_lifecycle_test.cpp
lg-atomese/: CMakeLists.txt
lg-atomese/examples/: lg_atomese_demo.cc
unify/lib/: CMakeLists.txt
ure/opencog/: CMakeLists.txt
(+857 files in other folders)
